--- a/Sneakers/src/index.css
+++ b/Sneakers/src/index.css
@@ -7,9 +7,7 @@ body {
   font-family: 'Kumbh Sans', sans-serif;
 }
 
-body {
-  font-family: Arial, sans-serif;
-}
+
 
 .cartItemsContainer {
   width: 20rem;
@@ -27,7 +25,7 @@ body {
 }
 
 .cartItems.open {
-  top: 2rem;
+  top: 6rem;
 }
 
 .sideMenu {
@@ -91,52 +89,15 @@ li {
   opacity: 1;
 }
 
-/* 
 
-body {
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  background-color: #f4f4f4;
-}
 
-button {
-  margin-left: 10px;
-}
 
-h1, h2, h3 {
-  margin-bottom: 20px;
-}
 
-.modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.7);
-}
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-.close-btn {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close-btn:hover,
-.close-btn:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-} */
+   .thumnail img {
+       opacity: 0.6;
+      transition: opacity 0.3s ease;
+     }  
+     .thumnail img:hover, .thumnail img.active {
+       opacity: 1;
+     }
